# screenlogicpy

./: .gitignore  12592_chem_data.txt  README.md  equip_flags.txt  json_data.txt  notes.txt  pyproject.toml  setup.py
.github/workflows/: python-package.yml
examples/: async_client.py  async_discovery.py  async_listen.py  discovery.py  gateway.py
notes/: 12500_status_changed.txt  12504_color_update.txt  12510_get_circuit_def.txt  12518_get_circuit_config.txt  12520_set_circuit.txt  12522_add_client.txt  12532_config_data.txt  12561_get_circuit_names.txt  12566_equip_data.txt  12576_set_scg.txt  12584_pump_data.txt  12592_chem_data.txt  12594_set_chem.txt  26_pc_logon.txt  8058_sys_data.txt  8110_get_datetime.txt  8112_set_datetime.txt  8121_get_version_response.txt  8174_get_ip_config.txt  equip_flags.txt  flow_array.txt  json_data.txt  scg_state_flags.txt
scratchpad/: scratch_chem_request.py  scratch_decode.py  scratch_recieve_codes.py
screenlogicpy/: __init__.py  __main__.py  cli.py  client.py  connection.py  const.py  data.py  discovery.py  exceptions.py  gateway.py  path_dict.py  screenlogic.py  system.py  validation.py
screenlogicpy/const/: __init__.py  common.py  data.py  msg.py
screenlogicpy/device_const/: chemistry.py  (+5 more)
tests/: adapter.py  conftest.py  const_data.py  data_sets.py  discovery.py  expected_data.py  fake_gateway.py  test_cli.py  test_client.py  test_connection.py  test_data.py  test_decode.py  test_discovery.py  test_gateway.py  test_login.py  test_protocol.py  test_query.py  test_request.py  test_requests.py  test_set.py  test_utility.py
(+79 files in other folders)
